# servidor-de-desafios

./: .gitignore  Dockerfile  Procfile  README.md  collectstatic.sh  docker-compose.yml  docker-entrypoint.sh  manage.py  mkdocs.yml  prepare_lambda_code.sh  pyproject.toml  requirements.txt
.ebextensions/: 00-set-timezone.config  applogs.config  db-migrate.config  django.config  securitygroup.config
.elasticbeanstalk/: config.yml
ChallengeTestRunner/: insper_test.py  run_tests.sh  setup.py
InsperProgChallenges/: settings.py  urls.py  wsgi.py
aws_lambda/: .gitignore  prepare_zip.sh  update.sh
challenges/: admin.py  code_runner.py  middleware.py  models.py  urls.py  validators.py  views.py
code_challenge/: __init__.py  admin.py  apps.py  challenge_controller.py  challenge_manager.py  code_runner.py  gitpy.py  models.py  repo.py  serializers.py  signals.py  test_challenge_manager.py  test_git.py  tests.py  urls.py  views.py
coding_challenge/: __init__.py  admin.py  apps.py  challenge_manager.py  code_runner.py  gitpy.py  models.py  serializers.py  signals.py  test_challenge_manager.py  test_git.py  tests.py  urls.py  views.py
content/: content_controller.py  tests.py  urls.py  views.py
core/: admin.py  aws.py  backend.py  choices.py  code_runner.py  date_utils.py  django_custom.py  managers.py  middleware.py  models.py  models_helper.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
course/: admin.py  models.py
docs/: API_Docs.md  Developer_Manual.md  Professor_Manual.md  Student_Manual.md  index.md
frontend/: .babelrc  .gitignore  README.md  i18next-parser.config.js  package-lock.json  package.json  urls.py  views.py  webpack.config.js
grade/: admin.py  models.py  serializers.py  urls.py  views.py
lambda_code/: lambda_handler.py
nginx/: nginx.conf
pages/: pages_controller.py  tests.py  urls.py  (+1 more)
(+342 files in other folders)
